@@ -140,5 +140,6 @@ Mauro Cavalcanti
 Chris Murphy
 Pierre Gerard-Marchant
 Christoph Gohlke
+Eric Bruning
 
 for valuable contributions.
